2006-06-27  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* camfr_wrap.cpp: Add get_fourier_orders.

2006-04-25  Philippe Tassin <Philippe.Tassin@vub.ac.be>

	* materials.h: Add leeft support for left handed materials.
	* materials.cpp: Ditto.
	* waveguide.h: Ditto.
	* camfr_wrap.cpp: Ditto.

2006-04-25  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* defs.h: Add mueller precision.
	* defs.cpp: Same.
	* camfr_wrap.cpp: Same.

2006-02-24  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* interface.cpp: Warn about incorrect assumptions.

2006-02-24  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* defs.h: Add always dense.
	* defs.cpp: Same.
	* icache.h: Same.
	* icache.cpp: Same.

2006-02-23  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* bloch.cpp: Speed up get_expansion_matrices considerably.

2006-02-23  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* stack.cpp: Speed up fw_bw_field in special cases.

2006-02-17  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* defs.h: Add sqrt_45.
	* defs.cpp: Ditto.

2005-11-29  Peter Debackere  <Peter.Debackere@UGent.be>

	* camfr_wrap.cpp: Add set_low_index_core, set_estimate_cutoff.
	* defs.h: Ditto.
	* defs.cpp: Ditto.

2005-09-28  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* defs.h: Add set_calc_field_profiles.
	* defs.cpp: Ditto.
	* camfr_wrap.cpp: Ditto.

2005-09-15  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* scatterer.h: Avoid uninitialised variable.

2005-09-15  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* waveguide.h: Deregister waveguide after destruction.

2005-08-19  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* waveguide.h: Don't copy gain material.
	* waveguide.cpp: Ditto.
	* scatterer.h: Ditto.
	* scatterer.cpp: Ditto.
	* stack.cpp: Ditto.
	* interface.cpp: Ditto.
	* infstack.cpp: Ditto.

2005-08-10  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* camfr_wrap.cpp: Add no_wall for Section.

2005-08-05  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* cavity.cpp: Don't allow to turn off coherence.
